# Housing_in_Mexico

./: Makefile  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/processed/: final_data.csv
models/: model.pkl
notebooks/: main.ipynb
utils/: make_pred.py  wrangle.py
