[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "housing_in_mexico"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Mohamed" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.14.4"


[tool.ruff]
line-length = 99
src = ["housing_in_mexico"]
include = ["pyproject.toml", "housing_in_mexico/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["housing_in_mexico"]
force-sort-within-sections = true

